=======
CHANGES
=======

------
0.9.0
------

Row/col options for sample data

------
0.8.3
------

Index header fixes
Cell color by mask added
Set color by value added
Can now set per column alignment
Snap now works
Fix to deleterows
Added move/copy column to menu
Can open excel files from cmd line
More options for heatmap

------
0.8.2
------

Fixed setup.py error that stopped pip install
Added column coloring functionality
Fixed slow adding of multiple rows
Fix to display row numbers properly for large tables

------
0.8.1
------

Added table operations to main menu
Added time series resample (table menu)
Can now undo last change for most operations
Differential expression plugin
Element-wise transform menu item
Added aggfunc to pivot dialog
Filtering tool highlights filtered rows by default
Added predefined widget filters to filtering dialog
Fixed slow drawing of large tables

------
0.8.0
------

Added datetime conversion dialog
Changes to make more compatible with matplotlib 2.0
Can now plot grouped single plots for some plot types (line, bar, scatter)
Fixed sharey, sharex for grouped plots
Added ability to choose pre-defined mpl styles
Fix to memory leak on redraws
Changes to right click copy behaviour
Fix for displaying small floats
Added floating precision to table preferences
Clipboard bug fix
Improvement to merge dialog
Fixes to widget styling issues on linux
Added duplicate column removal in clean data

------
0.7.2
------

Added black and white option for plotting
Fix to avoid white lines with some colormaps
Can now add text annotations to plots
Most plot options are now saved including grid settings
-t option for launching a test app
fix to scatter colors

------
0.7.1
------

Updated code for python 2.7 compatibility
Plot labels now in separate annotation tab
Added color by column value for scatter plots
Can now only save as messagepack, other formats are under export

------
0.7.0
------

Added fill data functions for columns